Populate HTML content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,111 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <p>Hello!</p>
+    <div class="sidebar">
+        <h1>Dashboard</h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="header">
+        <div class="searchbar">
+            <label for="search"><span></span></label>
+            <input type="text" id="search" name="user-search">
+        </div>
+
+        <div class="notifications"></div>
+        <div class="profile"></div>
+
+        <div class="greeting">
+            <p>Hi there<p>
+            <h2>Username (@user-name)</h2>
+        </div>
+
+        <div class="actions">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
+    </div>
+
+    <div class="main-content">
+        <div class="project-container">
+            <h3>Your Projects</h3>
+            <div class="project-card">
+                <h4>Super Cool Project</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+            <div class="project-card">
+                <h4>Less Cool Project</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+            <div class="project-card">
+                <h4>Impossible App</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+            <div class="project-card">
+                <h4>Easy App</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+            <div class="project-card">
+                <h4>Ad Blocker</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+            <div class="project-card">
+                <h4>Money Maker</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+        </div>
+        <div class="announcements">
+            <h3>Announcements</h3>
+            <div class="announcement-card">
+                <h5>Site Maintenance</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+            <div class="announcement-card">
+                <h5>Community Share Day</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+            <div class="announcement-card">
+                <h5>Updated Privacy Policy</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            </div>
+        </div>
+        <div class="trending">
+            <h3>Trending</h3>
+            <div class="trending-user">
+                <img src="">
+                <h5>User1</h5>
+                <p>User2</p>
+            </div>
+            <div class="trending-user">
+                <img src="">
+                <h5>User1</h5>
+                <p>User2</p>
+            </div>
+            <div class="trending-user">
+                <img src="">
+                <h5>User1</h5>
+                <p>User2</p>
+            </div>
+            <div class="trending-user">
+                <img src="">
+                <h5>User1</h5>
+                <p>User2</p>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
