Basic layout of elements

--- a/index.html
+++ b/index.html
@@ -10,29 +10,39 @@
 <body>
     <div class="sidebar">
         <h1>Dashboard</h1>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+        <nav>     
+                <div class="nav-links">
+                    <ul>
+                        <li>Home</li>
+                        <li>Profile</li>
+                        <li>Messages</li>
+                        <li>History</li>
+                        <li>Tasks</li>
+                        <li>Communities</li>
+                    </ul>
+                </div>
+                <div class="misc-links">
+                    <ul>
+                        <li>Settings</li>
+                        <li>Support</li>
+                        <li>Privacy</li>
+                    </ul>    
+                </div>
             </ul>
         </nav>
     </div>
 
     <div class="header">
         <div class="searchbar">
-            <label for="search"><span></span></label>
+            <label for="search"><span><img src=""></span></label>
             <input type="text" id="search" name="user-search">
         </div>
 
-        <div class="notifications"></div>
-        <div class="profile"></div>
+        <div class="user">
+            <div class="notifications"><img src=""></div>
+            <div class="profile"><p>User1</p></div>
+        </div>
+
 
         <div class="greeting">
             <p>Hi there<p>
@@ -49,29 +59,37 @@
     <div class="main-content">
         <div class="project-container">
             <h3>Your Projects</h3>
-            <div class="project-card">
-                <h4>Super Cool Project</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
-            </div>
-            <div class="project-card">
-                <h4>Less Cool Project</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
-            </div>
-            <div class="project-card">
-                <h4>Impossible App</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
-            </div>
-            <div class="project-card">
-                <h4>Easy App</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
-            </div>
-            <div class="project-card">
-                <h4>Ad Blocker</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
-            </div>
-            <div class="project-card">
-                <h4>Money Maker</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+            <div class="project-card-container">
+                <div class="project-card">
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+                    <div class="project-buttons"></div>
+                </div>
+                <div class="project-card">
+                    <h4>Less Cool Project</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+                    <div class="project-buttons"></div>
+                </div>
+                <div class="project-card">
+                    <h4>Impossible App</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+                    <div class="project-buttons"></div>
+                </div>
+                <div class="project-card">
+                    <h4>Easy App</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+                    <div class="project-buttons"></div>
+                </div>
+                <div class="project-card">
+                    <h4>Ad Blocker</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+                    <div class="project-buttons"></div>
+                </div>
+                <div class="project-card">
+                    <h4>Money Maker</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde repellat architecto quas dolorum consequuntur laudantium dolorem, consectetur eos incidunt est harum animi et aspernatur dignissimos doloremque quisquam provident rem.</p>
+                    <div class="project-buttons"></div>
+                </div>
             </div>
         </div>
         <div class="announcements">
