Change cursor over links

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <nav>     
                 <div class="nav-links">
                     <ul>
-                        <li><img class="icon" src="assets/icons/home.svg">Home</li>
-                        <li><img class="icon" src="assets/icons/account.svg">Profile</li>
-                        <li><img class="icon" src="assets/icons/chat.svg">Messages</li>
-                        <li><img class="icon" src="assets/icons/history.svg">History</li>
-                        <li><img class="icon" src="assets/icons/note-multiple.svg">Tasks</li>
-                        <li><img class="icon" src="assets/icons/account-group.svg">Communities</li>
+                        <li><img class="icon" src="assets/icons/home.svg"><span>Home</span></li>
+                        <li><img class="icon" src="assets/icons/account.svg"><span>Profile</span></li>
+                        <li><img class="icon" src="assets/icons/chat.svg"><span>Messages</span></li>
+                        <li><img class="icon" src="assets/icons/history.svg"><span>History</span></li>
+                        <li><img class="icon" src="assets/icons/note-multiple.svg"><span>Tasks</span></li>
+                        <li><img class="icon" src="assets/icons/account-group.svg"><span>Communities</span></li>
                     </ul>
                 </div>
                 <div class="misc-links">
                     <ul>
-                        <li><img class="icon" src="assets/icons/setting.svg">Settings</li>
-                        <li><img class="icon" src="assets/icons/help-rhombus.svg">Support</li>
-                        <li><img class="icon" src="assets/icons/shield-lock.svg">Privacy</li>
+                        <li><img class="icon" src="assets/icons/setting.svg"><span>Settings</span></li>
+                        <li><img class="icon" src="assets/icons/help-rhombus.svg"><span>Support</span></li>
+                        <li><img class="icon" src="assets/icons/shield-lock.svg"><span>Privacy</span></li>
                     </ul>    
                 </div>
             </ul>
